# subsonic-discord-rpc

./: .enc.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
cmd/: listening.go  root.go  tinkering.go  watching.go  writing.go
config/: config.go
discord/: rpc.go
go/: go.mod  go.sum  main.go
integrations/: init.go  jellyfin.go  subsonic.go
media_discord_rpc/: __init__.py  cli.py  jellyfin.py  main.py  subsonic.py
subsonic_discord_rpc/: main.py  subsonic.py
