[project]
name = "media-discord-rpc"
version = "0.1.0"
description = "Display your listening activity from subsonic-compatible servers & watching activity from jellyfin."
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.13"
dependencies = [
    "jellyfin-apiclient-python>=1.11.0",
    "pypresence",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pypresence = { url = "https://github.com/qwertyquerty/pypresence/archive/master.zip" }
